Fix gap below last panel due to new structure.

--- a/src/stylesheets/components/_panel.scss
+++ b/src/stylesheets/components/_panel.scss
@@ -8,12 +8,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding-bottom: $space-min;
   background-clip: content-box;
-
-  &:last-child {
-    padding-bottom: 0;
-  }
 
   .panel-header {
     flex: 0 0 $panel-header-height;
